@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add watcher process to make sure cleanup happens
+
 0.000018  2020-11-20 08:46:39-08:00 America/Los_Angeles
 
     - Fix bug where driver could be forgotten in pool during reclaim
